--- a/index.html
+++ b/index.html
@@ -6,7 +6,6 @@
         <meta name="description" content="">
 		<title>ngMadLibs | Recreating Mad Libs with AngularJS</title>
 		<link href="http://cdnjs.cloudflare.com/ajax/libs/foundation/5.0.3/css/normalize.min.css" rel="stylesheet" type="text/css" />
-		<link rel='stylesheet' href='css/grid-clearfix.css'>
 		<link rel='stylesheet' href='css/style.css'>
 	</head>
 	<body ng-app="">
@@ -65,10 +64,10 @@
 			<!-- BEGIN output -->
 			<div class="output">
 				<p>
-					{{maleName}} was a {{jobTitle}} who loved technology. Although he loved parts of his job, he absolutely hated {{tediousTask}} and {{dirtyTask}}. So, {{maleName}} met with his life mentor {{celebrity}} who told him to learn how to {{uselessSkill}} with Thinkful. Thinkful didn't offer a course in {{uselessSkill}} so he studied programming instead.
+					<span class="under" ng-if="!maleName"><span ng-non-bindable>{{male name}}</span></span><span class="under">{{maleName}}</span> was a <span class="under" ng-if="!jobTitle"><span ng-non-bindable>{{job title}}</span></span><span class="under">{{jobTitle}}</span> who loved technology. Although he loved parts of his job, he absolutely hated <span class="under" ng-if="!tediousTask"><span ng-non-bindable>{{tedious task}}</span></span><span class="under">{{tediousTask}}</span> and <span class="under" ng-if="!dirtyTask"><span ng-non-bindable>{{dirty task}}</span></span><span class="under">{{dirtyTask}}</span>. So, <span class="under" ng-if="!maleName"><span ng-non-bindable>{{male name}}</span></span><span class="under">{{maleName}}</span> met with his life mentor <span class="under" ng-if="!celebrity"><span ng-non-bindable>{{celebrity}}</span></span><span class="under">{{celebrity}}</span> who told him to learn how to <span class="under" ng-if="!uselessSkill"><span ng-non-bindable>{{useless skill}}</span></span><span class="under">{{uselessSkill}}</span> with Thinkful. Thinkful didn't offer a course in <span class="under" ng-if="!uselessSkill"><span ng-non-bindable>{{usless skill}}</span></span><span class="under">{{uselessSkill}}</span> so he studied programming instead.
 				</p>
 				<p>
-					What a great desicion! With his new skill, {{maleName}} built a(n) {{adjective}} robot named {{obnoxiousCelebrity}} that not only loved {{dirtyTask}} but did it {{hugeNumber}} times faster.
+					What a great desicion! With his new skill, <span class="under" ng-if="!maleName"><span ng-non-bindable>{{male name}}</span></span><span class="under">{{maleName}}</span> built a(n) <span class="under" ng-if="!adjective"><span ng-non-bindable>{{adjective}}</span></span><span class="under">{{adjective}}</span> robot named <span class="under" ng-if="!obnoxiousCelebrity"><span ng-non-bindable>{{obnoxious celebtrity}}</span></span><span class="under">{{obnoxiousCelebrity}}</span> that not only loved <span class="under" ng-if="!dirtyTask"><span ng-non-bindable>{{dirty task}}</span></span><span class="under">{{dirtyTask}}</span> but did it <span class="under" ng-if="!hugeNumber"><span ng-non-bindable>{{huge number}}</span></span><span class="under">{{hugeNumber}}</span> times faster.
 				</p>
 			</div>
 			<!-- END output -->
